docs/1.5/modules/en/pages/quickstart-ui.adoc
= {elemental-product-name} the visual way
:revdate: 2025-11-06
:page-revdate: {revdate}

[NOTE]
====
The following instructions need Rancher 2.8.x at least.
====

This quickstart will show you how to deploy the {elemental-product-name} plugin and operator into an existing Rancher Manager instance.

Once installed, you'll be able to provision a new {elemental-product-name} cluster based on RKE2 or K3s.

However, if you want to install staging or dev operator, you can only do it in xref:quickstart-cli.adoc#_non_stable_installations[CLI mode].

== Enable the Rancher Manager Extensions Support

In order to enable the Rancher Manager Extensions Support, you'll need to follow the steps below:

* Open a web browser, connect and login to your Rancher Manager instance
* Click on the top left menu and click on `Extensions`

image::quickstart-ui-menu.png[Rancher Manager menu]

* Click on `Enable` button to install the `Extension Operator`

image::quickstart-ui-extension-enable.png[Enable Rancher Manager Extensions Operator]

* A popup will appear, click on the `OK` button to continue and install the Rancher Manager Extensions repository

image::quickstart-ui-extension-repository.png[Add Rancher Manager Extensions repository]

== Install the elemental plugin

After the Rancher Manager Extensions Support is enabled, you can install the `elemental` plugin as follow:

* Under the `Available` tab you will see `elemental` plugin available

image::quickstart-ui-extensions-available.png[Rancher Manager Available plugins]

[NOTE]
====
If the `Available` tab shows no entries, refresh the page. The `elemental` plugin will then appear.
====

* Click on the `Install` button, a popup will appear and click on `Install` again to continue.

image::quickstart-ui-elemental-plugin-install.png[{elemental-product-name} plugin install]

* On the `Installed` tab, the `elemental` plugin is now listed.

[NOTE]
====
If the `elemental` plugin is listed and the status stays at `Installing...`, refresh the page. The `elemental` plugin will display correctly.
====

Once the `elemental` plugin installed, you can see the `OS Management` option in the Rancher Manager menu, refresh the page if you do not see it.

image::quickstart-ui-elemental-plugin-menu.png[Rancher Manager OS Management menu]

== Install the elemental operator

[NOTE]
====
The following guide will show you how to install the operator through the {elemental-product-name} UI. But you can also install it directly from the Marketplace.
====

Click on the OS Management button in the navigation menu.

If the operator is not already installed, the elemental ui will let you deploy it by clicking on the `Install {elemental-product-name} Operator` button:

image::quickstart-ui-extension-operator-button.png[Button to deploy elemental operator]

It will redirect you to the Rancher Marketplace to install the operator.

Click on the `Next` button:

image::quickstart-ui-extension-operator-install-1.png[Install {elemental-product-name} operator screenshot 1]

In this screen, you can customize or use the default values, click on `Install` to continue:

image::quickstart-ui-extension-operator-install-2.png[Install {elemental-product-name} operator screenshot 2]

You should see ``elemental-operator-crds``and `elemental-operator` deployed in the `cattle-elemental-system` namespace:

image::quickstart-ui-extension-operator-install-3.png[Install {elemental-product-name} operator screenshot 3]

[CAUTION]
====
If you do not see them, make sure to select the correct namespace at the top of the page.
====

== Add a Machine Registration Endpoint

In the OS Management dashboard, click the `Create Registration Endpoint` button.

image::quickstart-ui-registration-endpoint-create.png[OS Management registration endpoints]

Now here either you can enter each detail in its respective places or you can edit this as YAML and create the endpoint in one go. Here we'll edit every fields.

image::quickstart-ui-registration-endpoint-create-details.png[Create a Registration Endpoint with UI]

[IMPORTANT]
.Main options
====
`name: elemental-cluster1`: change this as per your need

`device-selector`: The xref:machineregistration-reference.adoc#_config_elemental_install_device_selector[device-selector] field can be used to dynamically pick device during installation. The field contains a list of rules to select the device you want.

`snapshotter`: Type of device used to manage snapshots in OS images.
====

Once you create the machine registration end point it should show up as active.

image::quickstart-ui-registration-endpoint-complete.png[Machine registered in Registration Endpoints]

== Preparing the installation (seed) image

Now this is the last step, you need to prepare a seed image that includes the initial registration config, so
it can be auto registered, installed and fully deployed as part of your cluster. The contents of the file are nothing
more than the registration URL that the node needs to register and the proper server certificate, so it can connect securely.

This seed image can then be used to provision an infinite number of machines.

The seed image is created as a Kubernetes resource above and can be built using the `Build Media` button, but first, you have to select ISO or RAW image.

In opposite to ISO where it needs two devices (device with ISO and another disk where to install {elemental-product-name}), RAW image allows to boot from a single device and directly install the operating system in the device.
RAW image only contains a boot and a recovery partition and it boots first into recovery mode to install {elemental-product-name} (for information, the process is similar to the xref:reset.adoc#_reset_workflow[reset] one).

image::quickstart-ui-registration-endpoint-build-media.png[Build Media in Registration Endpoints]

Once the build is done, media can be downloaded using the `Download Media` button:

image::quickstart-ui-registration-endpoint-download-media.png[Download Media in Registration Endpoints]

You can now boot your nodes with this image and they will:

* Register with the registrationURL given and create a per-machine `MachineInventory`
* Install SLE Micro to the given device
* Reboot

== Machine Inventory

When nodes are booting up for the first time, they connect to Rancher Manager and a xref:machineinventory-reference.adoc[`Machine Inventory`] is created for each node.

image::quickstart-ui-machine-inventory-menu.png[Machine Inventory menu]

Custom columns are based on `Machine Inventory Labels` which you can add when you create your `Machine Registration Endpoint`:

image::quickstart-ui-registration-endpoint-hardware-labels.png[Machine Registration Endpoint Hardware Labels]

On the following screenshot, xref:hardwarelabels.adoc[`Hardware Labels`] are used as custom columns:

You can also add custom columns by clicking on the three dots menu.

image::quickstart-ui-machine-inventory-custom-columns.png[Machine Inventory custom columns]

Finally, you can also filter your `Machine Inventory` using those labels.

For instance if you only want to see your AMD machines, you can filter on `CPUModel` like below:

image::quickstart-ui-machine-inventory-filtering.png[Machine Inventory filtering]

== Create your first {elemental-product-name} Cluster

Now let's use those `Machine Inventory` to create a cluster by clicking on `Create {elemental-product-name} Cluster` :

image::quickstart-ui-create-cluster-button.png[Create {elemental-product-name} Cluster button]

For your {elemental-product-name} cluster, you can either choose K3s or RKE2 for Kubernetes.

image::quickstart-ui-create-cluster-standard-screen-.png[{elemental-product-name} Cluster Creation Screen]

Most of the options are coming from Rancher, that's why we will not detail all the possibilities.
Feel free to check the https://documentation.suse.com/cloudnative/rancher-manager/latest/en/cluster-deployment/configuration/k3s.html[Rancher Manager K3s distribution configuration documentation] or the https://documentation.suse.com/cloudnative/rancher-manager/latest/en/cluster-deployment/configuration/rke2.html[Rancher Manager RKE2 distribution configuration documentation] if you want to know more.

However, it is important to highlight the `Inventory of Machines Selector Template` section.

It lets you choose which `Machine Inventory` you want to use to create your {elemental-product-name} cluster using the previously defined `Machine Inventory Labels` :

image::quickstart-ui-create-cluster-machine-selector-template.png[Use Machine Inventory Selector Template]

As our three Machine Inventories contain the label `CPUVendor` with the key `AuthenticAMD`, the three machines will be used to create the {elemental-product-name} cluster.
